...
import io.ktor.http.HttpHeaders
import io.ktor.http.contentType
import kotlinx.coroutines.launch
import kotlinx.coroutines.yield
import org.koin.compose.koinInject

const val WRITE_ANSWER_CONTENT_TAG = "WriteAnswerContent"
const val WRITE_ANSWER_FAB_PREVIEW_TAG = "WriteAnswerFabPreview"
const val WRITE_ANSWER_FAB_IMAGE_TAG = "WriteAnswerFabImage"
const val WRITE_ANSWER_FAB_SAVE_TAG = "WriteAnswerFabSave"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun WriteAnswerScreen(
    destination: WriteAnswer,
) {
...
